<resources>
    <string name="app_name">ClassicalChat</string>
    <string name="register">REGISTER</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="find_classical_meetups">Find Classical Meetups</string>
    <string name="find_like_minded_friends">Find Like-minded Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meetup_name">Meetup Name</string>
    <string name="location">Location</string>
    <string name="score">Score</string>
</resources>
