<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/meetupImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/dragIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignStart="@id/meetupImageView"
            android:layout_alignBottom="@id/meetupImageView"
            android:src="@drawable/ic_reorder_white_24dp"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meetupNameTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/meetup_name"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/meetupLocationTextView"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:id="@+id/meetupScoreTextView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>



    </LinearLayout>
</LinearLayout>